unpackaged/main/default/objects/Campaign_Head_Office__c/Campaign_Head_Office__c.object-meta.xml
<CustomObject>
    <label>Campaign Head Office</label>
    <nameField>
        <displayFormat>CHO-{000000}</displayFormat>
        <label>Campaign Head Office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Head Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>