unpackaged/main/default/objects/Campaign_Head_Office__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Head Offices</relationshipLabel>
    <relationshipName>Campaign_Head_Offices</relationshipName>
    <type>Lookup</type>
</CustomField>