unpackaged/main/default/objects/Campaign_Head_Office__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive</label>
    <type>Checkbox</type>
</CustomField>