unpackaged/main/default/objects/Campaign_Head_Office__c/fields/Incentive_Details__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Details__c</fullName>
    <label>Incentive Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>