unpackaged/main/default/objects/Campaign_Head_Office__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>Head_Office__r.Owner.FirstName &amp; &quot; &quot; &amp;  Head_Office__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>